--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -1,18 +1,27 @@
 services:
-  wireguard-test:
+  java-container:
     build:
       context: .
       dockerfile: Containerfile
-    container_name: wireguard_cc
+    image: java-project-container:latest
+    container_name: workshop_room
     cap_add:
       - NET_ADMIN
+    networks:
+      test_network:
+        ipv4_address: 172.0.0.100 # Assign a static IP in the new range
     volumes:
-      - ./:/app:Z
-    privileged: false  # No need for full privileges
-    network_mode: bridge  # Use bridge networking instead of host
-    ports:
-      - "51820:51820/udp"  # WireGuard port
-    environment:
-      - TZ=UTC
-    security_opt:
-      - label=disable
+      - .:/workbench # Mount current directory to /workbench
+    working_dir: /workbench # Set the container's working directory
+    #ports:
+    #  - "8080:8080" # Optional: Map host port to container port
+    tty: true
+    stdin_open: true
+
+networks:
+  test_network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.0.0.0/24
+
