--- a/init.toml
+++ b/init.toml
@@ -1,5 +1,5 @@
-server_name = "Wireguard-v2"
-server_subnet = "10.8.16.0/24"
-server_address = "10.8.16.1/24"
-listen_port = "14856"
-endpoint = "172.236.185.187"
+server_name = "Wireguard-test"
+server_subnet = "10.1.1.0/24"
+server_address = "10.1.1.1/24"
+listen_port = "54789"
+endpoint = "172.0.0.100/24"
