--- a/init.toml
+++ b/init.toml
@@ -1,5 +1,5 @@
-server_name = "Wireguard-test"
+server_name = "Wireguard-03.alpha"
 server_subnet = "10.1.1.0/24"
 server_address = "10.1.1.1/24"
 listen_port = "54789"
-endpoint = "172.0.0.100/24"
+endpoint = "172.2.0.101"
