Connection Manager working well with iptables and firewalld, in iptables, set default policies to drop and allow 22/tcp. Need to add already running connection when program is started

--- a/containers/app/init.toml
+++ b/containers/app/init.toml
@@ -1,5 +1,5 @@
-server_name = "Wireguard-03.alpha"
+server_name = "Wireguard-03.alpha.iptables"
 server_subnet = "10.1.1.0/24"
 server_address = "10.1.1.1/24"
 listen_port = "54789"
-endpoint = "172.2.0.101"
+endpoint = "172.0.0.101"
