--- a/Wireguard-03.alpha.toml
+++ b/Wireguard-03.alpha.toml
@@ -1,11 +1,17 @@
-Server_PrivateKey = "sL+R9FtYKIGb5XmgvZ7yyBXbBuE8fjgiIMZTgg7NdGw="
+Server_PrivateKey = "8Idohyhv7oAJJKd3BNMFFLt9/qr/Y5Txq+IV+uRC4Go="
 Listening_Port = "54789"
 Server_Name = "Wireguard-03.alpha"
-Server_PublicKey = "2mkp9Gf/lPiIjQpvFrDnUJEZHwYc/K/G7cRLRSTrFhE="
+Server_PublicKey = "MoRtqE8d+TKtyTIuptBScaCV+GhS3dFMGP4oIN3VfHw="
 Server_Address = "10.1.1.1/24"
-PeerA_PublicKey="3g/wpGviBGFvOuI7sz64ucFK2AIOOPSMLU0U0koCxiE="
-PeerA_Address="10.1.1.11/24"
-PeerA_PrivateKey="WF/fVEdJeXl6Z3m6zFK1kftoeIL8i9rOQ2/DWM3OJn4="
-PeerA_AllowedIPS="10.1.1.0/24"
-PeerA_Server_Address="10.1.1.11/32"
 PeerA_Endpoint="172.2.0.101:54789"
+PeerA_Server_Address="10.1.1.2/32"
+PeerA_AllowedIPS="10.1.1.0/24"
+PeerA_PrivateKey="2PIx2kV8PMmIs+WJtmmZ3akpMGGh8szsy9CmqRUSQXY="
+PeerA_Address="10.1.1.2/24"
+PeerA_PublicKey="VCM3A8allUtSBsXf86uhYFWpLOpQJBEd/FoK/6yVLWI="
+PeerB_AllowedIPS="10.1.1.0/24"
+PeerB_PublicKey="mLfcIdNuL28vx3Jxy4kVKnYkYnsD0rTxxpvLkeQ17ys="
+PeerB_Endpoint="172.2.0.101:54789"
+PeerB_PrivateKey="QDJhgOFpFqjZlCAcnYYWTjNr31K6Krlm6f7qdu7xjE4="
+PeerB_Address="10.1.1.3/24"
+PeerB_Server_Address="10.1.1.3/32"
